--- a/.gitignore
+++ b/.gitignore
@@ -3,20 +3,27 @@
 # dependencies
 /node_modules
 /.pnp
+/client/.pnp
 .pnp.js
-
+/client/node_modules
 # testing
 /coverage
+/client/coverage
 
 # production
 /build
-
+/client/build
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+/client/.DS_Store
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
